force-app/main/default/objects/COMM_Subscription__c/COMM_Subscription__c.object-meta.xml
<CustomObject>
    <description>Object to represent a Subscription associated with a Client</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SBS-{0000}</displayFormat>
        <label>Subscriptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>