force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Account__c.field-meta.xml
<CustomField>
    <fullName>COMM_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account associated with the Subscription Record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>