force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Active__c.field-meta.xml
<CustomField>
    <fullName>COMM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the Subscription is currently Active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>