force-app/main/default/objects/COMM_Subscription__c/fields/COMM_ActiveSubscriptionRequest__c.field-meta.xml
<CustomField>
    <fullName>COMM_ActiveSubscriptionRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to display the open Subscription Request</description>
    <label>Active Subscription Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>ActiveSubscriptionRequest</relationshipName>
    <type>Lookup</type>
</CustomField>