force-app/main/default/objects/COMM_Subscription__c/fields/COMM_ActiveSubscriptionRequestRecordType__c.field-meta.xml
<CustomField>
    <fullName>COMM_ActiveSubscriptionRequestRecordType__c</fullName>
    <formula>COMM_ActiveSubscriptionRequest__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Subscription Request Record Type</label>
    <type>Text</type>
</CustomField>