force-app/main/default/objects/COMM_Subscription__c/fields/COMM_ActiveSubscriptionRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>COMM_ActiveSubscriptionRequestStatus__c</fullName>
    <description>Field used to display the current Status of the current active subscription request</description>
    <formula>TEXT( COMM_ActiveSubscriptionRequest__r.Status )</formula>
    <label>Active Subscription Request Status</label>
    <type>Text</type>
</CustomField>