force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Address__c.field-meta.xml
<CustomField>
    <fullName>COMM_Address__c</fullName>
    <description>Address of the Client associated with the Subscription</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>