force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Airport__c.field-meta.xml
<CustomField>
    <fullName>COMM_Airport__c</fullName>
    <description>Airport the Subscription is associated with</description>
    <formula>CASE(COMM_Product__r.COMM_Airport__c,
&quot;OPO&quot;, &quot;Porto&quot;,
&quot;LIS&quot;,&quot;Lisbon&quot;,
&quot;FAO&quot;,&quot;Faro&quot;,
&quot;FNC&quot;,&quot;Madeira&quot;,
&quot;PDL&quot;,&quot;Ponta Delgada&quot;,
&quot;&quot;)</formula>
    <label>Airport</label>
    <type>Text</type>
</CustomField>