force-app/main/default/objects/COMM_Subscription__c/fields/COMM_AirportValue__c.field-meta.xml
<CustomField>
    <fullName>COMM_AirportValue__c</fullName>
    <description>Field used on Sharing Rules. Due multi-picklist limitation.</description>
    <label>Airport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Airport</valueSetName>
    </valueSet>
</CustomField>