force-app/main/default/objects/COMM_Subscription__c/fields/COMM_AutomaticRenewal__c.field-meta.xml
<CustomField>
    <fullName>COMM_AutomaticRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbos to identify if Subscription record must be renewed automatically.</description>
    <label>Automatic Renewal</label>
    <type>Checkbox</type>
</CustomField>