force-app/main/default/objects/COMM_Subscription__c/fields/COMM_CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_CancellationDate__c</fullName>
    <description>Field used to store the exact date when a Subscription is canceled</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>