force-app/main/default/objects/COMM_Subscription__c/fields/COMM_CarBrand__c.field-meta.xml
<CustomField>
    <fullName>COMM_CarBrand__c</fullName>
    <description>Brand of the Vehicle associated with the Subscription</description>
    <label>Car Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>