force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Card__c.field-meta.xml
<CustomField>
    <fullName>COMM_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Card to be included with the Subscription</description>
    <label>Card</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Associated Product can only be a Card</errorMessage>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Card</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscriptions (Card)</relationshipLabel>
    <relationshipName>CardSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>