force-app/main/default/objects/COMM_Subscription__c/fields/COMM_CarModel__c.field-meta.xml
<CustomField>
    <fullName>COMM_CarModel__c</fullName>
    <description>Model of the Vehicle associated with the Subscription</description>
    <label>Car Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>