force-app/main/default/objects/COMM_Subscription__c/fields/COMM_ChangeSubscriptionPeriodicity__c.field-meta.xml
<CustomField>
    <fullName>COMM_ChangeSubscriptionPeriodicity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to store the new Product of a Periodicity Change.</description>
    <label>Change of Subscription Periodicity</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscriptions (Change of Subscription Periodicity)</relationshipLabel>
    <relationshipName>Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>