force-app/main/default/objects/COMM_Subscription__c/fields/COMM_CheckPartnerVisibility__c.field-meta.xml
<CustomField>
    <fullName>COMM_CheckPartnerVisibility__c</fullName>
    <formula>OR(IF(
        ISBLANK($User.COMM_EffectiveAccountId__c),
        $User.COMM_AccountId__c = COMM_Account__r.Id &amp;&amp; CONTAINS($User.COMM_ContactAirports__c, TEXT(COMM_AirportValue__c)),
        CONTAINS($User.COMM_EffectiveAccountId__c, COMM_Account__r.Id) &amp;&amp; CONTAINS($User.COMM_ContactAirports__c, TEXT(COMM_AirportValue__c))),
        OR($UserRole.DeveloperName =&apos;COMM_ANA_Admin&apos;,$UserRole.DeveloperName =&apos;COMM_Platform_Administrator&apos;,$UserRole.DeveloperName =&apos;COMM_SABA&apos;,$UserRole.DeveloperName =&apos;COMM_AirportAdmin_LIS&apos;,$UserRole.DeveloperName =&apos;COMM_AirportAdmin_OPO&apos;,$UserRole.DeveloperName =&apos;COMM_AirportAdmin_FAO&apos;,$UserRole.DeveloperName =&apos;COMM_AirportAdmin_FNC&apos;,$UserRole.DeveloperName =&apos;COMM_AirportAdmin_PDL&apos;))</formula>
    <label>Check Partner Visibility</label>
    <type>Checkbox</type>
</CustomField>