force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Contact__c.field-meta.xml
<CustomField>
    <fullName>COMM_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact associated with the Subscription Record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>