force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Email__c.field-meta.xml
<CustomField>
    <fullName>COMM_Email__c</fullName>
    <description>Email of the client associated with the Subscription</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>