force-app/main/default/objects/COMM_Subscription__c/fields/COMM_EndDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_EndDate__c</fullName>
    <description>Date when the Subscription is scheduled to end</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>