force-app/main/default/objects/COMM_Subscription__c/fields/COMM_FirstName__c.field-meta.xml
<CustomField>
    <fullName>COMM_FirstName__c</fullName>
    <description>First Name of the Client associated with the Subscription</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>