force-app/main/default/objects/COMM_Subscription__c/fields/COMM_InitialSubscriptionMonth__c.field-meta.xml
<CustomField>
    <fullName>COMM_InitialSubscriptionMonth__c</fullName>
    <description>Month where the Subscription will initially start</description>
    <label>Initial Subscription Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Month</valueSetName>
    </valueSet>
</CustomField>