force-app/main/default/objects/COMM_Subscription__c/fields/COMM_InRenewal__c.field-meta.xml
<CustomField>
    <fullName>COMM_InRenewal__c</fullName>
    <description>Formula field to identify if Subscription is in Renewal Process</description>
    <formula>AND(
COMM_ActiveSubscriptionRequestRecordType__c == &quot;COMM_RecurringPublicSubscription&quot;,
NOT(OR(
    ISPICKVAL(COMM_ActiveSubscriptionRequest__r.Status, &quot;Process Concluded&quot;),
    ISPICKVAL(COMM_ActiveSubscriptionRequest__r.Status, &quot;Archived&quot;),
    ISPICKVAL(COMM_ActiveSubscriptionRequest__r.Status, &quot;Expired&quot;)))
)</formula>
    <label>In Renewal</label>
    <type>Checkbox</type>
</CustomField>