force-app/main/default/objects/COMM_Subscription__c/fields/COMM_IsRenewable__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsRenewable__c</fullName>
    <description>Formula used to identify if Subscription is renewable</description>
    <formula>(TODAY() + $CustomMetadata.COMM_SubscriptionManagementConfig__mdt.RenewableLimit.COMM_Value__c) &lt;=  COMM_EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Renewable</label>
    <type>Checkbox</type>
</CustomField>