force-app/main/default/objects/COMM_Subscription__c/fields/COMM_JobRole__c.field-meta.xml
<CustomField>
    <fullName>COMM_JobRole__c</fullName>
    <description>Job Role of the Client associated with the Subscription</description>
    <label>Job Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>