force-app/main/default/objects/COMM_Subscription__c/fields/COMM_LastName__c.field-meta.xml
<CustomField>
    <fullName>COMM_LastName__c</fullName>
    <description>Last Name of the Client associated with the Subscription</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>