force-app/main/default/objects/COMM_Subscription__c/fields/COMM_LicensePlate__c.field-meta.xml
<CustomField>
    <fullName>COMM_LicensePlate__c</fullName>
    <description>License Plate of the Vehicle associated with the Subscription</description>
    <label>License Plate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>