force-app/main/default/objects/COMM_Subscription__c/fields/COMM_OCIEndDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_OCIEndDate__c</fullName>
    <description>Field which will store the Product valid date to identify the possibility to extend the Subscription End Date based on the Periodicity.</description>
    <label>OCI End Date</label>
    <type>Date</type>
</CustomField>