force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Order__c.field-meta.xml
<CustomField>
    <fullName>COMM_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order associated with the Subscription</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>