force-app/main/default/objects/COMM_Subscription__c/fields/COMM_OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order Product associated with the Subscription</description>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>