force-app/main/default/objects/COMM_Subscription__c/fields/COMM_OrderSummary__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order Summary  associated with the Subscription</description>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>