force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Park__c.field-meta.xml
<CustomField>
    <fullName>COMM_Park__c</fullName>
    <formula>TEXT(COMM_Product__r.COMM_Park__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Park</label>
    <type>Text</type>
</CustomField>