force-app/main/default/objects/COMM_Subscription__c/fields/COMM_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>COMM_PaymentMethod__c</fullName>
    <description>Picklist field with Payment Method selected for Subscription acquisition.</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_PaymentType</valueSetName>
    </valueSet>
</CustomField>