force-app/main/default/objects/COMM_Subscription__c/fields/COMM_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_PhoneNumber__c</fullName>
    <description>Phone Number of the Client associated with the Subscription</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>