force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Price__c.field-meta.xml
<CustomField>
    <fullName>COMM_Price__c</fullName>
    <description>Price of all products: Subscription or Subscription + Card</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>