force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Product__c.field-meta.xml
<CustomField>
    <fullName>COMM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product the Subscription is associated with</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Subscription can only be associated with a Subscription Product</errorMessage>
        <filterItems>
            <field>Product2.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>COMM_Subscription</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>