force-app/main/default/objects/COMM_Subscription__c/fields/COMM_SABARejection__c.field-meta.xml
<CustomField>
    <fullName>COMM_SABARejection__c</fullName>
    <description>Reason for SABA Rejection</description>
    <label>SABA Rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>