force-app/main/default/objects/COMM_Subscription__c/fields/COMM_SecondaryCarBrand__c.field-meta.xml
<CustomField>
    <fullName>COMM_SecondaryCarBrand__c</fullName>
    <description>Brand of the Secondary Vehicle associated with the Subscription</description>
    <label>Secondary Car Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>