force-app/main/default/objects/COMM_Subscription__c/fields/COMM_SecondaryCarModel__c.field-meta.xml
<CustomField>
    <fullName>COMM_SecondaryCarModel__c</fullName>
    <description>Model of the Secondary Vehicle associated with the Subscription</description>
    <label>Secondary Car Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>