force-app/main/default/objects/COMM_Subscription__c/fields/COMM_SecondaryLicensePlate__c.field-meta.xml
<CustomField>
    <fullName>COMM_SecondaryLicensePlate__c</fullName>
    <description>License Plate of a Secondary Vehicle associated with the Subscription</description>
    <label>Secondary License Plate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>