force-app/main/default/objects/COMM_Subscription__c/fields/COMM_SetupInitialStock__c.field-meta.xml
<CustomField>
    <fullName>COMM_SetupInitialStock__c</fullName>
    <description>Indicate if the Subscription should be considered by the initial stock reservation (COMM_Async_SubscOCICreateStock)</description>
    <label>Setup Initial Stock</label>
    <length>255</length>
    <type>Text</type>
</CustomField>