force-app/main/default/objects/COMM_Subscription__c/fields/COMM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date when the Subscription starts</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>