force-app/main/default/objects/COMM_Subscription__c/fields/COMM_Status__c.field-meta.xml
<CustomField>
    <fullName>COMM_Status__c</fullName>
    <description>Current Status of the Subscription</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Approval</fullName>
                <default>true</default>
                <label>In Approval</label>
            </value>
            <value>
                <fullName>Waiting Conclusion</fullName>
            </value>
            <value>
                <fullName>Process Concluded</fullName>
            </value>
            <value>
                <fullName>Request Denied</fullName>
            </value>
            <value>
                <fullName>Archieved</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Pending Form</fullName>
                <isActive>false</isActive>
                <label>Pending Form</label>
            </value>
            <value>
                <fullName>Returned</fullName>
                <isActive>false</isActive>
                <label>Returned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>