force-app/main/default/objects/COMM_Subscription__c/fields/COMM_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubCategory__c</fullName>
    <formula>TEXT(COMM_Product__r.COMM_SubCategory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Category</label>
    <type>Text</type>
</CustomField>