force-app/main/default/objects/COMM_Subscription__c/fields/COMM_SubscriptionPriceChange__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubscriptionPriceChange__c</fullName>
    <description>Field used to store the new Product price of a Periodicity Change.</description>
    <label>Subscription Price to Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>