force-app/main/default/objects/COMM_Subscription__c/fields/COMM_VATNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_VATNumber__c</fullName>
    <description>VAT Number of the Client associated with the Subscription</description>
    <label>VAT Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>