force-app/main/default/objects/COMM_Subscription__c/recordTypes/COMM_DirectSales.recordType-meta.xml
<RecordType>
    <fullName>COMM_DirectSales</fullName>
    <active>true</active>
    <description>Represents a Subscription associated with Direct Sales</description>
    <label>Direct Sales</label>
</RecordType>