force-app/main/default/objects/COMM_Subscription__c/recordTypes/COMM_Partner.recordType-meta.xml
<RecordType>
    <fullName>COMM_Partner</fullName>
    <active>true</active>
    <description>Represents a Subscription associated with a Partner</description>
    <label>Partner</label>
</RecordType>