force-app/main/default/objects/COMM_Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COMM_SubscriptionNumber__c</columns>
    <columns>COMM_Status__c</columns>
    <columns>COMM_Account__c</columns>
    <columns>COMM_FirstName__c</columns>
    <columns>COMM_LastName__c</columns>
    <columns>COMM_Product__c</columns>
    <columns>COMM_Airport__c</columns>
    <columns>COMM_ActiveSubscriptionRequest__c</columns>
    <columns>COMM_ActiveSubscriptionRequestStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>