force-app/main/default/objects/COMM_Subscription__c/listViews/COMM_LV_Subscription_CancellationRequestPartner.listView-meta.xml
<ListView>
    <fullName>COMM_LV_Subscription_CancellationRequestPartner</fullName>
    <columns>NAME</columns>
    <columns>COMM_SubscriptionNumber__c</columns>
    <columns>COMM_Status__c</columns>
    <columns>COMM_Account__c</columns>
    <columns>COMM_FirstName__c</columns>
    <columns>COMM_LastName__c</columns>
    <columns>COMM_Product__c</columns>
    <columns>COMM_Airport__c</columns>
    <columns>COMM_ActiveSubscriptionRequest__c</columns>
    <columns>COMM_ActiveSubscriptionRequestStatus__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>COMM_ActiveSubscriptionRequestRecordType__c</field>
        <operation>equals</operation>
        <value>COMM_CancelationRequest</value>
    </filters>
    <filters>
        <field>COMM_CheckPartnerVisibility__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Subscription Cancellation Partner</label>
    <sharedTo>
        <group>COMM_PublicGroupPartnerAdmin</group>
    </sharedTo>
</ListView>